--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -75,49 +75,40 @@
   "tetrapak.stats.scorching.tooltip": "This tool will scorch drops, processing them the same way a furnace would. Does not affect unsmeltable items",
   "tetrapak.stats.moonsight": "Moonsight",
   "tetrapak.stats.moonsight.tooltip": "Wearing this belt will allow the wearer to see better under the moonlight",
-  "tetra.material.red_crystal_cluster": "Red Crystal",
   "tetra.variant.double_socket/red_crystal_cluster": "Socket [\u00a7cRed Crystal\u00a7r]",
-  "tetra.variant.double_socket/red_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and speeds up breaking of red blocks",
+  "tetra.variant.double_socket/red_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of red blocks.",
   "tetra.variant.single_socket/red_crystal_cluster": "Socket [\u00a7cRed Crystal\u00a7r]",
-  "tetra.variant.single_socket/red_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and speeds up breaking of red blocks",
-  "tetra.material.orange_crystal_cluster": "Orange Crystal",
-  "tetra.variant.double_socket/orange_crystal_cluster": "Socket [\u00a7cOrange Crystal\u00a7r]",
-  "tetra.variant.double_socket/orange_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and speeds up breaking of orange blocks",
-  "tetra.variant.single_socket/orange_crystal_cluster": "Socket [\u00a7cOrange Crystal\u00a7r]",
-  "tetra.variant.single_socket/orange_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and speeds up breaking of orange blocks",
-  "tetra.material.yellow_crystal_cluster": "Yellow Crystal",
+  "tetra.variant.single_socket/red_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of red blocks.",
+  "tetra.variant.double_socket/orange_crystal_cluster": "Socket [\u00a76Orange Crystal\u00a7r]",
+  "tetra.variant.double_socket/orange_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of orange blocks.",
+  "tetra.variant.single_socket/orange_crystal_cluster": "Socket [\u00a76Orange Crystal\u00a7r]",
+  "tetra.variant.single_socket/orange_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of orange blocks.",
   "tetra.variant.double_socket/yellow_crystal_cluster": "Socket [\u00a7eYellow Crystal\u00a7r]",
-  "tetra.variant.double_socket/yellow_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and speeds up breaking of yellow blocks",
+  "tetra.variant.double_socket/yellow_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of yellow blocks.",
   "tetra.variant.single_socket/yellow_crystal_cluster": "Socket [\u00a7eYellow Crystal\u00a7r]",
-  "tetra.variant.single_socket/yellow_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and speeds up breaking of yellow blocks",
-  "tetra.material.green_crystal_cluster": "Green Crystal",
+  "tetra.variant.single_socket/yellow_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of yellow blocks.",
   "tetra.variant.double_socket/green_crystal_cluster": "Socket [\u00a7aGreen Crystal\u00a7r]",
-  "tetra.variant.double_socket/green_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and speeds up breaking of green blocks",
+  "tetra.variant.double_socket/green_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of green blocks.",
   "tetra.variant.single_socket/green_crystal_cluster": "Socket [\u00a7aGreen Crystal\u00a7r]",
-  "tetra.variant.single_socket/green_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and speeds up breaking of green blocks",
-  "tetra.material.blue_crystal_cluster": "Blue Crystal",
+  "tetra.variant.single_socket/green_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of green blocks.",
   "tetra.variant.double_socket/blue_crystal_cluster": "Socket [\u00a7bBlue Crystal\u00a7r]",
-  "tetra.variant.double_socket/blue_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and speeds up breaking of blue blocks",
+  "tetra.variant.double_socket/blue_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of blue blocks.",
   "tetra.variant.single_socket/blue_crystal_cluster": "Socket [\u00a7bBlue Crystal\u00a7r]",
-  "tetra.variant.single_socket/blue_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and speeds up breaking of blue blocks",
-  "tetra.material.indigo_crystal_cluster": "Indigo Crystal",
+  "tetra.variant.single_socket/blue_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of blue blocks.",
   "tetra.variant.double_socket/indigo_crystal_cluster": "Socket [\u00a75Indigo Crystal\u00a7r]",
-  "tetra.variant.double_socket/indigo_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and speeds up breaking of indigo blocks",
+  "tetra.variant.double_socket/indigo_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of indigo blocks.",
   "tetra.variant.single_socket/indigo_crystal_cluster": "Socket [\u00a75Indigo Crystal\u00a7r]",
-  "tetra.variant.single_socket/indigo_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and speeds up breaking of indigo blocks",
-  "tetra.material.violet_crystal_cluster": "Violet Crystal",
+  "tetra.variant.single_socket/indigo_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of indigo blocks.",
   "tetra.variant.double_socket/violet_crystal_cluster": "Socket [\u00a7dViolet Crystal\u00a7r]",
-  "tetra.variant.double_socket/violet_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and speeds up breaking of violet blocks",
+  "tetra.variant.double_socket/violet_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of violet blocks.",
   "tetra.variant.single_socket/violet_crystal_cluster": "Socket [\u00a7dViolet Crystal\u00a7r]",
-  "tetra.variant.single_socket/violet_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and speeds up breaking of violet blocks",
-  "tetra.material.white_crystal_cluster": "White Crystal",
+  "tetra.variant.single_socket/violet_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of violet blocks.",
   "tetra.variant.double_socket/white_crystal_cluster": "Socket [\u00a7fWhite Crystal\u00a7r]",
-  "tetra.variant.double_socket/white_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and speeds up breaking of white blocks",
+  "tetra.variant.double_socket/white_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of white blocks.",
   "tetra.variant.single_socket/white_crystal_cluster": "Socket [\u00a7fWhite Crystal\u00a7r]",
-  "tetra.variant.single_socket/white_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and speeds up breaking of white blocks",
-  "tetra.material.black_crystal_cluster": "Black Crystal",
+  "tetra.variant.single_socket/white_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of white blocks.",
   "tetra.variant.double_socket/black_crystal_cluster": "Socket [\u00a70Black Crystal\u00a7r]",
-  "tetra.variant.double_socket/black_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and speeds up breaking of black blocks",
+  "tetra.variant.double_socket/black_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of black blocks.",
   "tetra.variant.single_socket/black_crystal_cluster": "Socket [\u00a70Black Crystal\u00a7r]",
-  "tetra.variant.single_socket/black_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and speeds up breaking of black blocks"
+  "tetra.variant.single_socket/black_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of black blocks."
 }
