I think i added the unholy symbol
but probably not tbh

[NOTE: still needs synergy set up properly rn itll wokr on any double]

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -27,6 +27,8 @@
   "tetra.variant.single_socket/fiery_glass.description": "A gem, attached where the head meets the handle. The gem is enchanted and will scorch anything the tool touches",
   "tetra.variant.sword_socket/fiery_glass": "Socket [\u00a76Fiery Glass\u00a7r]",
   "tetra.variant.sword_socket/fiery_glass.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and will scorch anything the sword touches",
+  "tetra.variant.double_socket/unholy_symbol": "Socket [\u00a7bUnholy Symbol\u00a7r]",
+  "tetra.variant.double_socket/unholy_symbol.description": "An unholy mark inscribed into the material allows souls to flow together and crystalize along the blade.",
   "tetra.variant.double_socket/moonstone": "Socket [\u00a7bMoonstone\u00a7r]",
   "tetra.variant.double_socket/moonstone.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the tool increased damage and efficiency depending on moon phase",
   "tetra.variant.single_socket/moonstone": "Socket [\u00a7bMoonstone\u00a7r]",
@@ -53,6 +55,8 @@
   "tetra.improvement.tetrapak/voiding.description": "The void powers infused into Shadow Steel give this tool incredible power at the cost of converting ALL drops to experience. Fortune and Looting both increase dropped experience",
   "tetra.improvement.tetrapak/moonstrike.name": "Moonstrike",
   "tetra.improvement.tetrapak/moonstrike.description": "The moonstone used to make this tool gains strength based on moon phase",
+  "tetrapak.stats.reaping": "Reaping",
+  "tetrapak.stats.reaping.tooltip": "This tool will make undead mobs drop soul shards",
   "tetrapak.stats.voiding": "Voiding",
   "tetrapak.stats.voiding.tooltip": "This tool will void the drops of blocks mined and mobs killed with it in exchange for experience\n\n\u00a7ex%s \u00a77mob kill experience multiplier\n\u00a7ex%s \u00a77block experience multiplier",
   "tetrapak.stats.rainbow": "Rainbow",
