added arcane gold, unholy symbok is craftbale on tools but absoultely useless, set up eidolon as optional

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "tetra.material.arcane_gold": "Arcane Gold",
   "tetra.material.refined_radiance": "Refined Radiance",
   "tetra.material.refined_radiance.prefix": "Refined Radiance",
   "tetra.material.shadow_steel": "Shadow Steel",
