im tired and a icant see straight please help me

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "tetra.material.arcane_gold": "Arcane Gold",
+  "tetra.material.arcane_gold.prefix": "Arcane Gold",
   "tetra.material.refined_radiance": "Refined Radiance",
   "tetra.material.refined_radiance.prefix": "Refined Radiance",
   "tetra.material.shadow_steel": "Shadow Steel",
