--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -1,6 +1,4 @@
 {
-  "tetra.material.arcane_gold": "Arcane Gold",
-  "tetra.material.arcane_gold.prefix": "Arcane Gold",
   "tetra.material.refined_radiance": "Refined Radiance",
   "tetra.material.refined_radiance.prefix": "Refined Radiance",
   "tetra.material.shadow_steel": "Shadow Steel",
@@ -11,6 +9,10 @@
   "tetra.material.brass.prefix": "Brass",
   "tetra.material.moonstone": "Moonstone",
   "tetra.material.moonstone.prefix": "Moonstone",
+  "tetra.material.arcane_gold": "Arcane Gold",
+  "tetra.material.arcane_gold.prefix": "Arcane Gold",
+  "tetra.material.pewter": "Pewter",
+  "tetra.material.pewter.prefix": "Pewter",
   "tetra.variant.double_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
   "tetra.variant.double_socket/rose_quartz.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the wielder additional reach",
   "tetra.variant.single_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
@@ -29,8 +31,6 @@
   "tetra.variant.single_socket/fiery_glass.description": "A gem, attached where the head meets the handle. The gem is enchanted and will scorch anything the tool touches",
   "tetra.variant.sword_socket/fiery_glass": "Socket [\u00a76Fiery Glass\u00a7r]",
   "tetra.variant.sword_socket/fiery_glass.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and will scorch anything the sword touches",
-  "tetra.variant.double_socket/unholy_symbol": "Socket [\u00a7bUnholy Symbol\u00a7r]",
-  "tetra.variant.double_socket/unholy_symbol.description": "An unholy mark inscribed into the material allows souls to flow together and crystalize along the blade.",
   "tetra.variant.double_socket/moonstone": "Socket [\u00a7bMoonstone\u00a7r]",
   "tetra.variant.double_socket/moonstone.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the tool increased damage and efficiency depending on moon phase",
   "tetra.variant.single_socket/moonstone": "Socket [\u00a7bMoonstone\u00a7r]",
@@ -117,6 +117,12 @@
   "tetra.variant.double_socket/black_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of black blocks.",
   "tetra.variant.single_socket/black_crystal_cluster": "Socket [\u00a70Black Crystal\u00a7r]",
   "tetra.variant.single_socket/black_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of black blocks.",
+  "tetra.variant.single_socket/unholy_symbol": "Socket [\u00a7bUnholy Symbol\u00a7r]",
+  "tetra.variant.single_socket/unholy_symbol.description": "An unholy mark, inscribed where the head meets the handle. The symbol is enchanted and condenses the souls of slain undead into shards.",
+  "tetra.variant.double_socket/unholy_symbol": "Socket [\u00a7bUnholy Symbol\u00a7r]",
+  "tetra.variant.double_socket/unholy_symbol.description": "An unholy mark, inscribed onto the side of the tool head. The symbol is enchanted and condenses the souls of slain undead into shards.",
+  "tetra.variant.sword_socket/unholy_symbol": "Socket [\u00a7bUnholy Symbol\u00a7r]",
+  "tetra.variant.sword_socket/unholy_symbol.description": "An unholy mark, inscribed where the blade meets the hilt. The symbol is enchanted and condenses the souls of slain undead into shards.",
   "tetrapak.advancements.wither_void.title": "The Flex",
   "tetrapak.advancements.wither_void.description": "Kill a Wither with a Shadow Steel tool"
 }
