--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Version 0.3.2
         fixed collapsing potentially crashing
         fixed tool suggestions not being displayed properly in jei when playing on servers
         cleaned up some code
+        added attribute filters for honeable and broken tetra tools
 
 Version 0.3.1
     New content:
