--- a/changelog.txt
+++ b/changelog.txt
@@ -1,16 +1,15 @@
 Version 0.3.2
     Improvements and fixes:
-        fixed tetra pak not working on servers
-        fixed collapsing potentially crashing
-        fixed tool suggestions not being displayed properly in jei when playing on servers
-        cleaned up some code
-        added attribute filters for honeable and broken tetra tools
+        Fixed a server crash related to automatic salvaging
+        Fixed collapsing potentially crashing
+        Fixed tool suggestions not being displayed properly in JEI when playing on servers
+        Added Create attribute filters for hone-able and broken Tetra tools
 
 Version 0.3.1
     New content:
-        Jei support for automatic salvaging
+        JEI support for automatic salvaging
     Improvements and fixes:
-        fixed a faulty mixin
+        Fixed a faulty mixin
 
 Version 0.3
     New content:
