--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -13,6 +13,18 @@
   "tetra.material.arcane_gold.prefix": "Arcane Gold",
   "tetra.material.pewter": "Pewter",
   "tetra.material.pewter.prefix": "Pewter",
+  "tetra.material.tattered_cloth": "Tattered Cloth",
+  "tetra.material.tattered_cloth.prefix": "Tattered Cloth",
+  "tetra.material.wicked_weave": "Wicked Weave",
+  "tetra.material.wicked_weave.prefix": "Wicked Weave",
+  "tetra.material.ravager_hide": "Ravager Hide",
+  "tetra.material.ravager_hide.prefix": "Ravager Hide",
+  "tetra.material.cave_roots": "Cave Roots",
+  "tetra.material.cave_roots.prefix": "Cave Root",
+  "tetra.material.crab_shell": "Crab Shell",
+  "tetra.material.crab_shell.prefix": "Crab Shell",
+  "tetra.material.dragon_scale": "Dragon Scale",
+  "tetra.material.dragon_scale.prefix": "Dragon Scale",
   "tetra.variant.double_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
   "tetra.variant.double_socket/rose_quartz.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the wielder additional reach",
   "tetra.variant.single_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
