--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -63,14 +63,26 @@
   "tetra/schematic/toolbelt/mooncatcher.name": "Mooncatcher",
   "tetra/schematic/toolbelt/mooncatcher.description": "Attach a mooncatcher, allowing you to see better under the moonlight. This module will have no effect when moonlight is not present, such as during new moons or when underground.",
   "tetra.variant.mooncatcher/moonstone": "Mooncatcher",
+  "tetra/schematic/double/sickle/reaping.slot1": "Unholy Symbol",
+  "tetra/schematic/double/sickle/reaping.name": "Reaping",
+  "tetra/schematic/double/sickle/reaping.description": "Enchant this tool with dark magic to condense slain undead into soul shards",
+  "tetra/schematic/double/axe/cleaving.slot1": "Unholy Symbol",
+  "tetra/schematic/double/axe/cleaving.name": "Cleaving",
+  "tetra/schematic/double/axe/cleaving.description": "Supernaturally sharpen this tool with dark magic to cause slain monsters to occasionally drop their heads",
   "tetra.improvement.tetrapak/radiant.name": "Radiant",
   "tetra.improvement.tetrapak/radiant.description": "The latent energy of Refined Radiance allows this tool to harvest many blocks at a time depending upon the tool's function",
   "tetra.improvement.tetrapak/voiding.name": "Voiding",
   "tetra.improvement.tetrapak/voiding.description": "The void powers infused into Shadow Steel give this tool incredible power at the cost of converting ALL drops to experience. Fortune and Looting both increase dropped experience",
   "tetra.improvement.tetrapak/moonstrike.name": "Moonstrike",
   "tetra.improvement.tetrapak/moonstrike.description": "The moonstone used to make this tool gains strength based on moon phase",
+  "tetra.improvement.tetrapak/reaping.name": "Reaping",
+  "tetra.improvement.tetrapak/reaping.description": "This tool is enchanted by dark magic to transform undead monsters into soul shards when slain",
+  "tetra.improvement.tetrapak/cleaving.name": "Cleaving",
+  "tetra.improvement.tetrapak/cleaving.description": "This tool has been sharpened to a razor edge by dark magic, causing slain monsters to occasionally drop their heads",
   "tetrapak.stats.reaping": "Reaping",
   "tetrapak.stats.reaping.tooltip": "This tool will make undead mobs drop soul shards",
+  "tetrapak.stats.cleaving": "Cleaving",
+  "tetrapak.stats.cleaving.tooltip": "This tool will make mobs and players occasionally drop their respective heads",
   "tetrapak.stats.voiding": "Voiding",
   "tetrapak.stats.voiding.tooltip": "This tool will void the drops of blocks mined and mobs killed with it in exchange for experience\n\n\u00a7ex%s \u00a77mob kill experience multiplier\n\u00a7ex%s \u00a77block experience multiplier",
   "tetrapak.stats.rainbow": "Rainbow",
@@ -129,12 +141,6 @@
   "tetra.variant.double_socket/black_crystal_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of black blocks.",
   "tetra.variant.single_socket/black_crystal_cluster": "Socket [\u00a70Black Crystal\u00a7r]",
   "tetra.variant.single_socket/black_crystal_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of black blocks.",
-  "tetra.variant.single_socket/unholy_symbol": "Socket [\u00a7bUnholy Symbol\u00a7r]",
-  "tetra.variant.single_socket/unholy_symbol.description": "An unholy mark, inscribed where the head meets the handle. The symbol is enchanted and condenses the souls of slain undead into shards.",
-  "tetra.variant.double_socket/unholy_symbol": "Socket [\u00a7bUnholy Symbol\u00a7r]",
-  "tetra.variant.double_socket/unholy_symbol.description": "An unholy mark, inscribed onto the side of the tool head. The symbol is enchanted and condenses the souls of slain undead into shards.",
-  "tetra.variant.sword_socket/unholy_symbol": "Socket [\u00a7bUnholy Symbol\u00a7r]",
-  "tetra.variant.sword_socket/unholy_symbol.description": "An unholy mark, inscribed where the blade meets the hilt. The symbol is enchanted and condenses the souls of slain undead into shards.",
   "tetrapak.advancements.wither_void.title": "The Flex",
   "tetrapak.advancements.wither_void.description": "Kill a Wither with a Shadow Steel tool",
   "tetrapak.recipe.auto_salvage": "Automatic Salvaging",
