Add quark myalite and first pass at endergetic expansion materials

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -27,6 +27,12 @@
   "tetra.material.dragon_scale.prefix": "Dragon Scale",
   "tetra.material.thrasher_tooth": "Thrasher Tooth",
   "tetra.material.thrasher_tooth.prefix": "Thrasher Tooth",
+  "tetra.material.myalite": "Myalite",
+  "tetra.material.myalite.prefix": "Myalite",
+  "tetra.material.booflo_hide": "Booflo Hide",
+  "tetra.material.booflo_hide.prefix": "Booflo Hide",
+  "tetra.material.poise": "Poise",
+  "tetra.material.poise.prefix": "Poise",
 
   "tetra.variant.double_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
   "tetra.variant.double_socket/rose_quartz.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the wielder additional reach",
