--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -33,8 +33,12 @@
   "tetra.material.booflo_hide.prefix": "Booflo Hide",
   "tetra.material.poise": "Poise",
   "tetra.material.poise.prefix": "Poise",
-  "tetra.material.obsidian_ingot": "Obsidian Ingot",
-  "tetra.material.obsidian_ingot.prefix": "Obsidian Ingot",
+  "tetra.material.thallasium": "Thallasium",
+  "tetra.material.thallasium.prefix": "Thallasium",
+  "tetra.material.terminite": "Terminite",
+  "tetra.material.terminite.prefix": "Terminite",
+  "tetra.material.aeternium": "Aeternium",
+  "tetra.material.aeternium.prefix": "Aeternium",
 
   "tetra.variant.double_socket/rose_quartz": "Socket [\u00a7cRose Quartz\u00a7r]",
   "tetra.variant.double_socket/rose_quartz.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and grants the wielder additional reach",
