Tweak BetterEnd materials a bit and add easter egg music disc

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -215,5 +215,9 @@
   "tetrapak.indigo" : "indigo",
   "tetrapak.violet" : "violet",
   "tetrapak.white" : "white",
-  "tetrapak.black" : "black"
+  "tetrapak.black" : "black",
+
+  "item.tetrapak.music_disc_playing_with_power": "Music Disc",
+  "item.tetrapak.music_disc_playing_with_power.desc": "FantomenK - Playing With Power"
+
 }
